Changed some <button> to <div> for comparison

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,14 +21,19 @@
         <div class="wrapper">
             <div class="grid">
                 <section>
-                    <p>A basic button that is sized to it's content:</p>
+                    <p>
+                        A basic button that is automatically sized to it's
+                        content:
+                    </p>
                     <button class="button">Button</button>
 
-                    <p>A basic button that is disabled:</p>
-                    <button class="button" disabled>Button Disabled</button>
+                    <hr />
 
-                    <p>A basic button that is pre-sized:</p>
-                    <button class="button button-wide">OK</button>
+                    <p>A basic button that is disabled:</p>
+                    <button disabled>Button Disabled</button>
+
+                    <p>A basic button that is pre-sized to be 7.25rem wide:</p>
+                    <button class="button-wide">OK</button>
                 </section>
 
                 <section>
@@ -37,31 +42,29 @@
 
                     <hr />
 
-                    <button class="button_default">Button Default</button><br />
-
-                    <button class="button_hover">Hover / Focus</button><br />
-                    <button class="button_active">Active / Pressed</button
-                    ><br />
-                    <button class="button_disabled">Disabled</button>
+                    <div class="button_default">Button Default</div>
+                    <div class="button_hover">Hover / Focus</div>
+                    <div class="button_active">Active / Pressed</div>
+                    <div class="button_disabled">Disabled</div>
                 </section>
 
                 <section>
                     <p>Secondary styled buttons</p>
 
-                    <button class="button new-button">Styled</button><br />
+                    <button class="new-button">Secondary</button><br />
 
                     <hr />
 
-                    <button class="button new-button">Button Default</button
-                    ><br />
-
-                    <button class="button new-button_hover">
-                        Hover / Focus</button
-                    ><br />
-                    <button class="button new-button_active">
-                        Active / Pressed</button
-                    ><br />
-                    <button class="button_disabled">Disabled</button>
+                    <div class="button_default new-button_default">
+                        Secondary Default
+                    </div>
+                    <div class="button_default new-button_hover">
+                        Secondary Hover / Focus
+                    </div>
+                    <div class="button_default new-button_active">
+                        Secondary Active / Pressed
+                    </div>
+                    <div class="button_default button_disabled">Disabled</div>
                 </section>
             </div>
         </div>
