--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,10 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/evolveU-icon.ico">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <title>Gaia</title>
+
+  <!-- VDR FA Icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
   <!--Tentative-->
 </head>
 
