--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-      <title>Gaia</title> <!--Tentative-->
-  </head>
-  <body>
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <title>Gaia</title>
+
+        <!--VDR TEST CSS BELOW-->
+        <link rel="stylesheet" href="test.css" />
+    </head>
+    <body>
+        <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+        <div id="root"></div>
+    </body>
 </html>
