--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,11 @@
 
         <!--VDR TEST CSS BELOW-->
         <link rel="stylesheet" href="test.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,600&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
